--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet" />
     <title>DiscordClone</title>
   </head>
   <body>
